--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ def selenideVersion = "6.13.0",
     restAssuredVersion = "5.3.0",
     allureVersion = "2.21.0",
     junitVersion = "5.9.3",
-    slf4jVersion = "2.0.7"
+    slf4jVersion = "2.0.7",
+    ownerVersion = "1.0.4"
 
 allure {
     report {
@@ -34,7 +35,8 @@ dependencies {
             "io.appium:java-client:8.3.0",
             "io.rest-assured:rest-assured:$restAssuredVersion",
             "org.junit.jupiter:junit-jupiter:$junitVersion",
-            "org.slf4j:slf4j-simple:$slf4jVersion"
+            "org.slf4j:slf4j-simple:$slf4jVersion",
+            "org.aeonbits.owner:owner:$ownerVersion"
     )
 }
 
